2002-05-16  Eric Blake  <ebb9@email.byu.edu>

	* src/dump.cpp (token_type): One more update.

2002-05-16  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (PrintINHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_LOCAL):
	* src/decl.cpp (FindType): Improve error message.

2002-05-15  Andrew Pimlott  <jikes-dev@andrew.pimlott.net>

	* src/bytecode.cpp (EmitConditionalExpression): Fix bug in
	the patch on 11 May.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	* src/dump.cpp (token_type): Missed a case in previous commit.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	Updated version of patch 40.
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/definite.cpp:
	* src/expr.cpp: Add support for parenthesized variables - bug 105.
	* src/error.cpp:
	* src/error.h: Add new errors UNNECESSARY_PARENTHESIS,
	NOT_A_VARIABLE.
	* src/java.g: Update grammar to allow parenthesized variables in
	assignment expressions.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javasym.h: Regenerate.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitStatement):  Fix definite assignment
	analysis of for loops - bug 2780.
	* src/definite.cpp (DefiniteForStatement): Fix abrupt completion
	bug in loops.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (CompileClass): Fix bug 2256 for default
	private constructors, jacks test 8.8.7-runtime-default-3.
	(CompileClass): 
	* src/expr.cpp (UpdateLocalConstructors): Fix bug 206, when
	accessing private superconstructor from local class.

2002-05-15  David Lum  <david.lum@level8.com>

	* src/bytecode.cpp (EmitThisInvocation): Workaround for bug 2256 -
	fix constructors in local and anonymous classes.

2002-05-14  Mo DeJong  <supermo@bayarea.net>

	* src/bytecode.cpp (EndMethod): Invoke new
	Code_attribute::CodeLengthExceeded() method instead of checking
	the return value of Code_attribute::CodeLength(). The check was
	not valid since CodeLength() was returning a u2 value which would